[package]
name = "strong-type-derive"
description = "Macro implemenation for #[derive(StrongType)]"
version = "0.10.0"
edition = "2021"

license = "MIT OR Apache-2.0"
keywords = ["primitive", "string", "strongly-typed"]
repository = "https://github.com/yunjhongwu/strong-type"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
