[package]
name = "strong-type"
description = "Procedural macros for naming and strong-typing pritimives and strings"
version = "1.0.0"
edition = "2024"

license = "MIT OR Apache-2.0"
keywords = ["primitive", "string", "strongly-typed"]
repository = "https://github.com/yunjhongwu/strong-type"
readme = "../README.md"

[dependencies]
strong-type-derive = { version = "1.0.0", path = "../strong-type-derive" }
